@@ -1033,6 +1033,7 @@ about.text=jEdit is brought to you by\n\
 	David Askew\n\
 	David Moss\n\
 	David Taylor\n\
+	Dennis Hotson\n\
 	Denis Lambot\n\
 	Dirk Moebius\n\
 	Dominic Stolerman\n\
